# rust-acrylic-demo

./: Cargo.toml  LICENSE  README.md
bindings/: Cargo.toml  build.rs
src/: interop.rs  main.rs  util.rs  window_subclass.rs  window_target.rs
