[package]
name = "rust-win2d"
version = "0.1.0"
authors = ["kai <thiskaiguy@gmail.com>"]
edition = "2018"

[dependencies]
bindings = { path = "bindings" }
windows = "0.2.1"
winit = "0.24"
raw-window-handle = "0.3"
futures = "0.3"
windows-window-subclass = { git = "https://github.com/thisKai/windows-window-subclass", features = ["unstable"] }
