[package]
name = "bindings"
version = "0.1.0"
authors = ["kai <thiskaiguy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winrt = { git = "https://github.com/microsoft/winrt-rs" }

[build-dependencies]
winrt = { git = "https://github.com/microsoft/winrt-rs" }

[package.metadata.winrt.dependencies]
"Win2D.uwp" = "1.25.0"
"Microsoft.VCRTForwarders.140" = "1.0.7"